# ComfyUI-Face-Detection

./: README.md  nodes.py  pyproject.toml
.github/workflows/: publish.yml
