[project]
name = "face-detection"
description = ""
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["opencv-python", "scikit-image"]

[project.urls]
Repository = "https://github.com/sm079/ComfyUI-Face-Detection"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Face-Detection"
Icon = ""
includes = []
