[project]
name = "ComfyUI-Face-Detection"
description = "face detection nodes for comfyui"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["opencv-python", "scikit-image"]

[project.urls]
Repository = "https://github.com/sm079/ComfyUI-Face-Detection"

#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "sm079"
DisplayName = "ComfyUI-Face-Detection"
Icon = ""
includes = []
